# helpdesk-app-backend

./: .env.example  .env.test  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: code-style-check.yml
docker/python/: Dockerfile
src/helpdesk_app_backend/: .env.example  .env.test  main.py
src/helpdesk_app_backend/api/: __init__.py
src/helpdesk_app_backend/api/v1/: __init__.py  account.py  auth.py  healthcheck.py  ticket.py  user_account.py
src/helpdesk_app_backend/api/v1/admin/: __init__.py  account.py
src/helpdesk_app_backend/cli/: create_admin.py
src/helpdesk_app_backend/core/: auth.py  check_token.py  database.py  settings.py
src/helpdesk_app_backend/exceptions/: business_exception.py  forbidden_exception.py  unauthorized_exception.py  unprocessable_entity_exception.py  validation_exception.py
src/helpdesk_app_backend/handlers/: server_exception_handler.py
src/helpdesk_app_backend/logic/business/: security.py  status_transition_rules.py
src/helpdesk_app_backend/logic/calculate/: calculate_datetime.py
src/helpdesk_app_backend/migrations/: env.py
src/helpdesk_app_backend/migrations/versions/: 25fe270ce0ee_create_tables.py  2c7957ec7687_ticket_table_details_column_fix.py  4157bdf41527_create_ticket_table.py  440df3938ec9_added_is_suspended_column.py  a06cc9f0db99_create_ticket_histories_table.py  ba7e77c0e899_create_action_table.py  bf278336ccda_create_admin_seed_data.py
src/helpdesk_app_backend/models /db/: base.py
src/helpdesk_app_backend/models/db/: __init__.py  action.py  base.py  ticket.py  ticket_history.py  user.py
src/helpdesk_app_backend/models/enum/: ticket.py  user.py
src/helpdesk_app_backend/models/internal/: token_payload.py
src/helpdesk_app_backend/models/request/v1/: account.py  auth.py  ticket.py
src/helpdesk_app_backend/models/request/v1/admin/: account.py
src/helpdesk_app_backend/models/response/v1/: account.py  action.py  healthcheck.py  ticket.py  ticket_history.py  user_account.py
src/helpdesk_app_backend/models/response/v1/admin/: account.py
src/helpdesk_app_backend/repositories/: action.py  ticket.py  ticket_history.py  user.py
src/helpdesk_app_backend/schemas/: auth.py
src/helpdesk_app_backend/services/: auth.py  users.py
tests/api/: conftest.py
tests/api/v1/: test_account.py  test_auth.py  test_healthcheck.py  test_ticket.py  test_user_account.py
tests/api/v1/admin/: test_account.py
tests/core/: test_check_token.py
tests/logic/business/: test_security.py  test_status_transition_rules.py
tests/logic/calculate/: test_calculate_datetime.py
